Inclusion of secret
