# internal/types/resource/resource.go
@@ -4,22 +4,24 @@ package resource
 type Type uint
 
 const (
-	Unknown     Type = 0
-	All         Type = 1
-	Scope       Type = 2
-	User        Type = 3
-	Group       Type = 4
-	Role        Type = 5
-	AuthMethod  Type = 6
-	Account     Type = 7
-	AuthToken   Type = 8
-	HostCatalog Type = 9
-	HostSet     Type = 10
-	Host        Type = 11
-	Target      Type = 12
-	Controller  Type = 13
-	Worker      Type = 14
-	Session     Type = 15
+	Unknown       Type = 0
+	All           Type = 1
+	Scope         Type = 2
+	User          Type = 3
+	Group         Type = 4
+	Role          Type = 5
+	AuthMethod    Type = 6
+	Account       Type = 7
+	AuthToken     Type = 8
+	HostCatalog   Type = 9
+	HostSet       Type = 10
+	Host          Type = 11
+	Target        Type = 12
+	Controller    Type = 13
+	Worker        Type = 14
+	Session       Type = 15
+	Secret        Type = 16
+	SecretSession Type = 17
 )
 
 func (r Type) String() string {
@@ -40,24 +42,28 @@ func (r Type) String() string {
 		"controller",
 		"worker",
 		"session",
+		"secret",
+		"secret-session",
 	}[r]
 }
 
 var Map = map[string]Type{
-	Unknown.String():     Unknown,
-	All.String():         All,
-	Scope.String():       Scope,
-	User.String():        User,
-	Group.String():       Group,
-	Role.String():        Role,
-	AuthMethod.String():  AuthMethod,
-	Account.String():     Account,
-	AuthToken.String():   AuthToken,
-	HostCatalog.String(): HostCatalog,
-	HostSet.String():     HostSet,
-	Host.String():        Host,
-	Target.String():      Target,
-	Controller.String():  Controller,
-	Worker.String():      Worker,
-	Session.String():     Session,
+	Unknown.String():       Unknown,
+	All.String():           All,
+	Scope.String():         Scope,
+	User.String():          User,
+	Group.String():         Group,
+	Role.String():          Role,
+	AuthMethod.String():    AuthMethod,
+	Account.String():       Account,
+	AuthToken.String():     AuthToken,
+	HostCatalog.String():   HostCatalog,
+	HostSet.String():       HostSet,
+	Host.String():          Host,
+	Target.String():        Target,
+	Controller.String():    Controller,
+	Worker.String():        Worker,
+	Session.String():       Session,
+	Secret.String():        Secret,
+	SecretSession.String(): SecretSession,
 }
